2013-03-28  Zan Dobersek  <zdobersek@igalia.com>

        [GTK] Build GTK-specific, non-layer-violating source code into WebCore-independent libPlatformGtk.la
        https://bugs.webkit.org/show_bug.cgi?id=112546

        Reviewed by Martin Robinson.

        * GNUmakefile.am: Reference the platformgtk_cppflags amongst the libWebCoreInternals' CPPFLAGS. GtkVersioning.c file has
        moved back to Source/WebCore/platform. Fix an indentation issue as well.

2013-03-28  Ming Xie  <mxie@blackberry.com>

        [BlackBerry] Committer Email Updates
        https://bugs.webkit.org/show_bug.cgi?id=113435

        Reviewed by Rob Buis.

        Add the @blackberry.com email address for all our BlackBerry
        WebKit committers. This is the first step for our email address
        migration.

        * Scripts/webkitpy/common/config/committers.py:

2013-03-28  Philippe Normand  <pnormand@igalia.com>

        [jhbuild] GStreamer system plugins conflict with the ones built in jhbuild
        https://bugs.webkit.org/show_bug.cgi?id=113508

        Reviewed by Martin Robinson.

        Prevent the GStreamer plugin scanner to load system-wide
        plugins. Only the ones built in JHBuild should be loaded and used
        at runtime.

        * efl/jhbuildrc:
        * gtk/jhbuildrc:

2013-03-27  Philippe Normand  <pnormand@igalia.com>

        [GTK] run-launcher --gtk -2 fails on a WK2-only build
        https://bugs.webkit.org/show_bug.cgi?id=113386

        Reviewed by Carlos Garcia Campos.

        * Scripts/webkitdirs.pm:
        (builtDylibPathForName): The WebKit2GTK .so name change from 1.0
        version to 3.0. Reflect this change so the builtDylibPathForName
        function doesn't fail to report the library as found.

2013-03-28  Jaehun Lim  <ljaehun.lim@samsung.com>

        [CMAKE] Build fix after r147052. Add WebKit2/Shared/Plugins to include path
        https://bugs.webkit.org/show_bug.cgi?id=113484

        Unreviewed build fix.
