@@ -260,13 +260,13 @@ class PatchProcessingQueue(AbstractPatchQueue):
         AbstractPatchQueue.__init__(self, options)
 
     # FIXME: This is a hack to map between the old port names and the new port names.
-    def _new_port_name_from_old(self, port_name):
+    def _new_port_name_from_old(self, port_name, platform):
         # The new port system has no concept of xvfb yet.
         if port_name == 'chromium-xvfb':
             return 'chromium'
         # ApplePort.determine_full_port_name asserts if the name doesn't include version.
         if port_name == 'mac':
-            return 'mac-future'
+            return 'mac-' + platform.os_name
         if port_name == 'win':
             return 'win-future'
         return port_name
@@ -279,11 +279,11 @@ class PatchProcessingQueue(AbstractPatchQueue):
         self._deprecated_port = DeprecatedPort.port(self.port_name)
         # FIXME: This violates abstraction
         self._tool._deprecated_port = self._deprecated_port
-        self._port = self._tool.port_factory.get(self._new_port_name_from_old(self.port_name))
+        self._port = self._tool.port_factory.get(self._new_port_name_from_old(self.port_name, self._tool.platform))
 
     def _upload_results_archive_for_patch(self, patch, results_archive_zip):
         if not self._port:
-            self._port = self._tool.port_factory.get(self._new_port_name_from_old(self.port_name))
+            self._port = self._tool.port_factory.get(self._new_port_name_from_old(self.port_name, self._tool.platform))
 
         bot_id = self._tool.status_server.bot_id or "bot"
         description = "Archive of layout-test-results from %s for %s" % (bot_id, self._port.name())
